TEST_PROGRAMS/INVALID/Inderjot_Ratol/invalid3.min
#declaring variable in the middle if code and checking computation

var a: float;
a=20;

print(a);
a=a*2+(3/a)+5;

var b: int; #should throw an error

read (b);
print(b);

